# tap-pokemon

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  meltano.yml  pyproject.toml  tox.ini
.github/workflows/: requirements.txt  test.yaml  test.yml
tests/: test_core.py
