[project]
name = "tap-pokemon"
version = "0.0.1"
description = "`tap-pokemon` is a Singer tap for Pokemon, built with the Meltano SDK for Singer Taps."
authors = [{ name = "Edgar Ramírez-Mondragón", email = "edgarrm358@gmail.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "Apache-2.0"
keywords = [
    "ELT",
    "singer.io",
    "Pokemon",
]
dependencies = [
    "singer-sdk~=0.53.2",
    "requests-cache~=1.2.0 ; python_version < '4'",
]

[project.urls]
Homepage = "https://github.com/reservoir-data/tap-pokemon"
Repository = "https://github.com/reservoir-data/tap-pokemon"
Documentation = "https://github.com/reservoir-data/tap-pokemon#readme"

[project.scripts]
tap-pokemon = "tap_pokemon.tap:TapPokemon.cli"

[dependency-groups]
dev = ["pytest~=9.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = "-vvv"

[tool.mypy]
warn_unused_configs = true

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
ignore = [
  "ANN101",  # missing-type-self
  "DJ",      # flake8-django
  "PD",      # pandas-vet
  "COM812",  # missing-trailing-comma
  "ISC001",  # single-line-implicit-string-concatenation
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["tap_neon"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"noxfile.py" = ["ANN"]
"tests/*" = ["ANN"]

[tool.ruff.lint.pydocstyle]
convention = "google"
